Rollback to previous working version and remove target folder (#1)
* Remove target folder
* Added target folder in gitignore file
* Rollback to previous changes, as current ones were breaking the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .DS_Store
 .idea/shelf
-/target
 /confluence/target
 /dependencies/repo
 /android.tests.dependencies
@@ -75,3 +74,4 @@ outTmp/
 /kotlin-native/dist
 kotlin-ide/
 .idea/
+target/
